# llm-eval

./: README.md  pyproject.toml
bench/cases/sample-1/: bug_sha.txt  failing_test.txt  logs.txt  repo_url.txt  truth_file.txt
bench/cases/sample-2/: bug_sha.txt  failing_test.txt  logs.txt  truth_file.txt
scripts/: apply_patch.sh  compile_and_test.sh
src/jmb/: __init__.py  builder.py  cli.py  config.py  patcher.py  prompts.py  repo_summary.py  report.py  retrieval.py  runner.py  scorer.py  types.py  utils.py  vcs.py
src/jmb/model_client/: __init__.py  anthropic_client.py  base.py  factory.py  openai_like.py
templates/: report.md.j2
